# MyBookingServices

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  clo5.mdj
.github/workflows/: automerge.yml  booking_api.yml  docs.yml  management_api.yml  user_api.yml
APIs/: README.md
APIs/booking/: Dockerfile  README.md  pyproject.toml
APIs/booking/booking/: app.py  book.py  config.py  database.py  main.py  utils.py
APIs/booking/booking/models/: book.py  hotels.py  rooms.py
APIs/booking/booking/routers/: book.py  hotels.py  rooms.py  users.py
APIs/booking/tests/: test_app.py  test_book.py  test_config.py  test_database.py  test_hotels.py  test_main.py  test_rooms.py  test_users.py  test_utils.py
APIs/management/: Dockerfile  README.md  pyproject.toml
APIs/management/management/: app.py  config.py  database.py  main.py  utils.py
APIs/management/management/models/: addresses.py  hotels.py  options.py  price_policies.py  rooms.py
APIs/management/management/routers/: addresses.py  hotels.py  options.py  price_policies.py  rooms.py
APIs/management/tests/: test_addresses.py  test_app.py  test_config.py  test_hotels.py  test_options.py  test_price_policies.py  test_rooms.py
APIs/users/: Dockerfile  README.md  pyproject.toml
APIs/users/tests/: test_app.py  test_config.py  test_database.py  test_main.py  test_users.py  test_utils.py
APIs/users/users/: app.py  config.py  database.py  main.py
APIs/users/users/auth/: auth_handler.py
APIs/users/users/models/: auth.py  users.py
APIs/users/users/routers/: users.py
APIs/users/users/utils/: auth_bearer.py  auth_handler.py
ansible/: README.md  ansible.cfg  etna_hosts  gitlab.yml  hosts  infrastructure.yml
ansible/data/: hosts.j2  telegraf.conf
ansible/vars/: gitlab.yml  runner.yml
db/: clo5.mdj  mybookingservices.mysql  mybookingservices.sql  requirements.txt  setup_db.py
docs/: README.md  conf.py  conf.py.bal  generate_architecture.py  index.rst  introduction.rst  requirements.txt
docs/APIs/: apis.rst
misc/: requirements.txt  setup_db.py
terraform/: README.md
traefik/: docker-compose.yml  traefik.toml
(+43 files in other folders)
