[tool.poetry]
name = "booking"
version = "0.1.0"
description = "Booking API"
authors = ["hauteb_m"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
booking = "booking.main:main"
