[tool.poetry]
name = "booking"
version = "0.1.0"
description = "Booking API"
authors = ["hauteb_m"]

[tool.poetry.dependencies]
python = "^3.7.1"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
SQLAlchemy = "^1.4.20"
PyMySQL = "^1.0.2"
cryptography = "^3.4.7"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
requests = "^2.26.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.scripts]
booking = "booking.main:main"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
