[tool.poetry]
name = "users"
version = "0.1.0"
description = "Booking API"
authors = ["hauteb_m"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.14.0"
fastapi = "^0.65.2"
SQLAlchemy = "^1.4.20"
PyMySQL = "^1.0.2"
cryptography = "^3.4.8"
pydantic = {extras = ["email"], version = "^1.8.2"}
PyJWT = "^2.1.0"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
users = "users.main:main"
